added basic message formats

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,5 +16,5 @@ add_subdirectory(protocol)
 #[[
 # libLichtenteinClient - Dynamic client protocol handler
 #]]
-add_library(libLichtensteinClient SHARED library.cpp library.h)
-target_link_libraries(libLichtensteinClient libLichtensteinProto)
+add_library(lichtensteinClient SHARED library.cpp library.h)
+target_link_libraries(lichtensteinClient lichtensteinProto)
