--- a/protocol/CMakeLists.txt
+++ b/protocol/CMakeLists.txt
@@ -1,6 +1,6 @@
 # define the library
-add_library(libLichtensteinProto STATIC version.cpp version.h)
+add_library(lichtensteinProto STATIC version.cpp version.h)
 
 # pull in compiled protobufs
 add_subdirectory(proto)
-target_link_libraries(libLichtensteinProto lichtensteinProtobufs)
+target_link_libraries(lichtensteinProto PRIVATE lichtensteinProtobufs)
