--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -1,5 +1,5 @@
 # define the library
-add_library(lichtensteinClient SHARED version.c version.h io/TLSServer.cpp io/TLSServer.h io/TLSClient.cpp io/TLSClient.h io/OpenSSLError.cpp io/OpenSSLError.h)
+add_library(lichtensteinClient SHARED version.c version.h io/TLSServer.cpp io/TLSServer.h io/TLSClient.cpp io/TLSClient.h io/OpenSSLError.cpp io/OpenSSLError.h io/DTLSServer.cpp io/DTLSServer.h io/GenericTLSServer.h io/GenericTLSServer.cpp)
 
 # link with the protobufs for the lichtenstein wire protocols
 target_link_libraries(lichtensteinClient lichtensteinProto)
@@ -8,5 +8,5 @@ target_link_libraries(lichtensteinClient lichtensteinProto)
 find_package(OpenSSL REQUIRED)
 target_link_libraries(lichtensteinClient OpenSSL::SSL OpenSSL::Crypto)
 
-find_package(glog 0.4.0 REQUIRED)
+find_package(glog REQUIRED)
 target_link_libraries(lichtensteinClient glog::glog)
