--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,11 +2,16 @@ cmake_minimum_required(VERSION 3.14)
 project(liblichtenstein)
 
 #[[
+# Set up some search paths
+#]]
+set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/CMake;${CMAKE_MODULE_PATH}")
+
+#[[
 # Shared C++ options
 #]]
 set(CMAKE_CXX_STANDARD 17)
 
-
+set(CMAKE_VERBOSE_MAKEFILE ON)
 
 #[[
 # libLichtensteinProto - Static protocol library
