changed namespace of IO helpers in liblichtenstein

--- a/protocol/proto/shared/CMakeLists.txt
+++ b/protocol/proto/shared/CMakeLists.txt
@@ -5,7 +5,7 @@ find_package(Protobuf REQUIRED)
 # specify include directories and generate C++
 include_directories(${PROTOBUF_INCLUDE_DIR})
 
-protobuf_generate_cpp(PROTO_SRC PROTO_HEADER Message.proto)
+protobuf_generate_cpp(PROTO_SRC PROTO_HEADER Message.proto AuthToken.proto)
 
 # specify it as a library
 add_library(lichtensteinProtobufsShared OBJECT ${PROTO_HEADER} ${PROTO_SRC})
