Implemented factory-based client API handlers Split all IO (TLS client/server code, mDNS) into its own static lib (for easier reuse by server)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,11 @@ set(CMAKE_VERBOSE_MAKEFILE ON)
 add_subdirectory(protocol)
 
 #[[
+# libLichtensteinIo - Static library with IO helpers
+#]]
+add_subdirectory(io)
+
+#[[
 # libLichtenteinClient - Dynamic client protocol handler
 #]]
 add_subdirectory(client)
