--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -1,7 +1,3 @@
-find_package(LibreSSL REQUIRED)
-find_package(glog REQUIRED)
-
-
 # compile in the git version file
 include(GetGitRevisionDescription)
 git_describe(VERSION --tags --dirty=-d)
@@ -19,25 +15,18 @@ configure_file(${CMAKE_CURRENT_SOURCE_DIR}/version.cpp.in
 set(version_file "${CMAKE_CURRENT_BINARY_DIR}/version.cpp")
 
 # define the library
-add_library(lichtensteinClient SHARED ${version_file} version.c version.h io/TLSServer.cpp io/TLSServer.h io/GenericServerClient.cpp io/GenericServerClient.h io/OpenSSLError.cpp io/OpenSSLError.h io/DTLSServer.cpp io/DTLSServer.h io/GenericTLSServer.h io/GenericTLSServer.cpp io/GenericTLSClient.cpp io/GenericTLSClient.h io/DTLSClient.cpp io/DTLSClient.h io/TLSClient.cpp io/TLSClient.h Client.cpp Client.h mdns/Service.h api/API.cpp api/API.h io/SSLSessionClosedError.h api/ClientHandler.cpp api/ClientHandler.h api/ProtocolError.h api/MessageSerializer.cpp api/MessageSerializer.h api/SerializationError.h)
+add_library(lichtensteinClient SHARED ${version_file} version.c version.h Client.cpp Client.h api/API.cpp api/API.h api/ClientHandler.cpp api/ClientHandler.h api/ProtocolError.h api/MessageSerializer.cpp api/MessageSerializer.h api/SerializationError.h api/IRequestHandler.h api/handlers/GetInfoReq.cpp api/handlers/GetInfoReq.h api/HandlerFactory.cpp api/HandlerFactory.h)
 
+# link with the protobufs and IO libs
+target_link_libraries(lichtensteinClient lichtensteinProto lichtensteinIo)
 
-# compile platform specific stuff into small shared libraries
-if (APPLE)
-    add_library(lichtensteinClientApple OBJECT mdns/AppleService.cpp mdns/AppleService.h)
-    target_link_libraries(lichtensteinClientApple glog::glog)
-
-    target_link_libraries(lichtensteinClient lichtensteinClientApple)
-endif ()
-
-# link with the protobufs for the lichtenstein wire protocols
-target_link_libraries(lichtensteinClient lichtensteinProto)
-
-include_directories(${CMAKE_BINARY_DIR}/protocol/proto)
+include_directories(${CMAKE_CURRENT_BINARY_DIR}/../protocol/proto)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/..)
 
 
 # also, link against LibreSSL
+find_package(LibreSSL REQUIRED)
+
 if (APPLE)
     # a kind of nasty hack for macOS, otherwise it will link with system OpenSSL :(
     include_directories(BEFORE SYSTEM /usr/local/opt/libressl/include)
@@ -47,4 +36,5 @@ else ()
 endif ()
 
 # other libraries (glog)
+find_package(glog REQUIRED)
 target_link_libraries(lichtensteinClient glog::glog)
