--- a/protocol/proto/rt/CMakeLists.txt
+++ b/protocol/proto/rt/CMakeLists.txt
@@ -5,7 +5,7 @@ find_package(Protobuf REQUIRED)
 # specify include directories and generate C++
 include_directories(${PROTOBUF_INCLUDE_DIR})
 
-protobuf_generate_cpp(PROTO_SRC PROTO_HEADER ChannelDescriptor.proto JoinChannel.proto JoinChannelAck.proto ChannelData.proto LeaveChannel.proto LeaveChannelAck.proto MulticastOutputReq.proto)
+protobuf_generate_cpp(PROTO_SRC PROTO_HEADER ChannelDescriptor.proto JoinChannel.proto JoinChannelAck.proto ChannelData.proto LeaveChannel.proto LeaveChannelAck.proto MulticastOutputReq.proto ChannelDataAck.proto)
 
 # specify it as a library
 add_library(lichtensteinProtobufsRt OBJECT ${PROTO_HEADER} ${PROTO_SRC})
