added stduuid library (for node UUID on client) defined client data store interface expanded client tests to have their own target folder

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -13,9 +13,7 @@ target_link_libraries(liblichtensteintests Catch2::Catch2)
 
 ###
 # client implementation test
-add_executable(client client_test.cpp)
-target_link_libraries(client lichtensteinClient)
-target_link_libraries(client glog::glog)
+add_subdirectory(client)
 
 ###
 # free standing DTLS client
