cleaned up client code added protobuf files for authentication

--- a/protocol/proto/shared/CMakeLists.txt
+++ b/protocol/proto/shared/CMakeLists.txt
@@ -8,7 +8,7 @@ include_directories(${PROTOBUF_INCLUDE_DIR})
 # this is needed on FreeBSD for it to find the any.proto definition
 set(PROTOBUF_IMPORT_DIRS "${PROTOBUF_INCLUDE_DIR};${PROTOBUF_IMPORT_DIRS}")
 
-protobuf_generate_cpp(PROTO_SRC PROTO_HEADER Message.proto AuthToken.proto)
+protobuf_generate_cpp(PROTO_SRC PROTO_HEADER Message.proto AuthToken.proto AuthHello.proto AuthChallenge.proto AuthResponse.proto AuthState.proto HmacAuthChallenge.proto HmacAuthResponse.proto)
 
 # specify it as a library
 add_library(lichtensteinProtobufsShared OBJECT ${PROTO_HEADER} ${PROTO_SRC})
