added adoption handler and code to support it errors are provided to the caller over api removed old "auth token" fields

--- a/protocol/proto/client/CMakeLists.txt
+++ b/protocol/proto/client/CMakeLists.txt
@@ -5,7 +5,7 @@ find_package(Protobuf REQUIRED)
 # specify include directories and generate C++
 include_directories(${PROTOBUF_INCLUDE_DIR})
 
-protobuf_generate_cpp(PROTO_SRC PROTO_HEADER RespStatus.proto GetInfo.proto GetInfoResponse.proto AdoptionStatus.proto NodeInfo.proto PerformanceInfo.proto)
+protobuf_generate_cpp(PROTO_SRC PROTO_HEADER RespStatus.proto GetInfo.proto GetInfoResponse.proto AdoptionStatus.proto NodeInfo.proto PerformanceInfo.proto AdoptRequest.proto AdoptAck.proto)
 
 # specify it as a library
 add_library(lichtensteinProtobufsClient OBJECT ${PROTO_HEADER} ${PROTO_SRC})
